Add interfaces